CREATE OR REPLACE TYPE PERSONNE AS OBJECT (
    CODE NUMBER(4),
    NOM varchar(30),
    PRENOM varchar(30),
    DDN date,
    AD varchar(30),
    TEL number(10)
) NOT FINAL;
/

CREATE TABLE CLIENTS OF PERSONNE (
    PRIMARY KEY (CODE),
    NOM NOT NULL,
    PRENOM NOT NULL,
    DDN NOT NULL,
    AD NOT NULL,
    TEL NOT NULL
);

CREATE OR REPLACE TYPE TCLASSE AS OBJECT (
    NOM VARCHAR(30)
);
/

CREATE TABLE CLASSE OF TCLASSE (
    PRIMARY KEY (NOM)
);

CREATE OR REPLACE TYPE TESPECE AS OBJECT (
    NOM VARCHAR(30),
    CLASSE REF TCLASSE
);
/

CREATE TABLE ESPECE OF TESPECE (
    PRIMARY KEY (NOM),
    CLASSE NOT NULL,
    SCOPE FOR (CLASSE) IS CLASSE
);

CREATE OR REPLACE TYPE TANIMAL AS OBJECT (
    CODE NUMBER(4),
    NOM VARCHAR(30),
    POIDS FLOAT,
    TAILLE FLOAT,
    NAISSANCE DATE,
    ESP REF TESPECE,
    PROPRIETAIRE REF PERSONNE
);
/

CREATE TABLE ANIMAL OF TANIMAL (
    PRIMARY KEY (CODE),
    NOM NOT NULL,
    POIDS NOT NULL,
    TAILLE NOT NULL,
    CHECK ((POIDS > 0) AND (TAILLE > 0 )),
    NAISSANCE NOT NULL,
    ESP NOT NULL,
    SCOPE FOR (ESP) IS ESPECE,
    PROPRIETAIRE NOT NULL,
    SCOPE FOR (PROPRIETAIRE) IS CLIENTS
);

CREATE OR REPLACE TYPE TEMPLOYE UNDER PERSONNE (
    SPECIALITE REF TCLASSE
);
/

CREATE TABLE VETERINAIRE OF TEMPLOYE (
    PRIMARY KEY (CODE),
    NOM NOT NULL,
    PRENOM NOT NULL,
    DDN NOT NULL,
    AD NOT NULL,
    TEL NOT NULL,
    SPECIALITE NOT NULL,
    SCOPE FOR (SPECIALITE) IS CLASSE
);

CREATE TABLE ASSISTANT OF TEMPLOYE (
    PRIMARY KEY (CODE),
    NOM NOT NULL,
    PRENOM NOT NULL,
    DDN NOT NULL,
    AD NOT NULL,
    TEL NOT NULL,
    SPECIALITE NOT NULL,
    SCOPE FOR (SPECIALITE) IS CLASSE
);

CREATE OR REPLACE TYPE TTRAITEMENT AS OBJECT (
    CODE NUMBER(4),
    DEBUT DATE,
    DUREE INT,
    NOM VARCHAR(30),
    ANI REF TANIMAL,
    VETE REF TEMPLOYE
);
/

CREATE TABLE TRAITEMENT OF TTRAITEMENT (
    PRIMARY KEY (CODE),
    DEBUT NOT NULL,
    DUREE NOT NULL,
    CHECK (DUREE > 0),
    NOM NOT NULL,
    ANI NOT NULL,
    SCOPE FOR (ANI) IS ANIMAL,
    VETE NOT NULL,
    SCOPE FOR (VETE) IS VETERINAIRE
);

CREATE OR REPLACE TYPE TMEDICAMENT AS OBJECT (
    MOLECULE VARCHAR(30),
    DESCRIP VARCHAR(30),
    EFFET_SECONDAIRE VARCHAR(100)
);
/

CREATE TABLE MEDICAMENT OF TMEDICAMENT (
    PRIMARY KEY (MOLECULE),
    DESCRIP NOT NULL,
    EFFET_SECONDAIRE NOT NULL
);

CREATE TABLE MEDI_CORESPOND_ANI (
    MEDICAMENT REF TMEDICAMENT,
    ESP REF TESPECE,
    SCOPE FOR (MEDICAMENT) IS MEDICAMENT,
    SCOPE FOR (ESP) IS ESPECE
);

CREATE TABLE MEDI_TRAITEMENT (
    TRAITE REF TTRAITEMENT,
    MEDIC REF TMEDICAMENT,
    QTE_PJ INT NOT NULL,
    CHECK (QTE_PJ > 0),
    SCOPE FOR (TRAITE) IS TRAITEMENT,
    SCOPE FOR (MEDIC) IS MEDICAMENT
);